fix: don't squash images

--- a/public/app.css
+++ b/public/app.css
@@ -42,4 +42,5 @@ h2 {
 img {
     width: 100%;
     height: 100%;
+    object-fit: cover;
 }
